# dashdown

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSING.md  README.md  SECURITY_AUDIT.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
dashdown/: __init__.py  actions.py  agent_presets.py  agent_targets.py  asgi.py  ask_compose.py  ask_engine.py  auth.py  build.py  catalog.py  chart_annotations.py  cli.py  edit.py  edit_session.py  embed.py  enterprise.py  llm.py  pdf.py  project.py  python_query.py  query_composition.py  query_library.py  schema_pack.py  screenshot.py  search.py  semantic.py  semantic_base.py  semantic_cube.py  server.py  streaming.py  telemetry.py  triggers.py
dashdown/components/: __init__.py  base.py
dashdown/components/builtin/: _map_base.py  _util.py  ask.py  auto_chart.py  bar_chart.py  bivariate_map.py  box_plot.py  bubble_map.py  button_group.py  calendar_heatmap.py  candlestick_chart.py  choropleth_facets.py  choropleth_time.py  combo_chart.py  combobox.py  counter.py  date_range.py  dot_density_map.py  dropdown.py  gauge_chart.py  graph_chart.py  grid.py  heatmap_chart.py  hierarchy_chart.py  line_chart.py  list_component.py  map_chart.py  parallel_chart.py  pivot_table.py  radar_chart.py  range_slider.py  sankey_chart.py  search.py  site_search.py  slider.py  table.py  tabs.py  theme_river.py  timegrain.py  toggle.py  (+1 more)
dashdown/data/: __init__.py  base.py  bigquery_connector.py  clickhouse_connector.py  csv_connector.py  cube_connector.py  dax_connector.py  dbapi.py  duckdb_connector.py  excel_connector.py  introspect.py  json_connector.py  motherduck_connector.py  mssql_connector.py  mysql_connector.py  parquet_connector.py  postgres_connector.py  quack_connector.py  registry.py  sheets_connector.py  snowflake_connector.py  tabular.py
dashdown/render/: attrs.py  components.py  icons.py  markdown.py  pipeline.py
dashdown/scaffold/: AGENTS.md
dashdown/scaffold/references/: ai.md  catalog.md  cli.md  components.md  configuration.md  connectors.md  detail-pages.md  exporting.md  filters.md  formatting.md  getting-started.md  installation.md  pages.md  queries.md  realtime.md  search.md
dashdown/static/: app.js  core.js  dashdown.css  dashdown.js  loading.js
dashdown/static/components/: _geo.js  annotations.js  ask.js  ask_box.js  bivariate_map.js  bubble_map.js  chart.js  chart_png.js  choropleth_facets.js  choropleth_time.js  combobox.js  counter.js  daterange.js  dot_density_map.js  echarts_theme.js  edit_panel.js  filter_bar.js  fullscreen.js  page_edit.js  print.js  range_slider.js  site_search.js  slider.js  table.js
dashdown/templates/: page.html
deploy/: Caddyfile  Dockerfile  README.md  cloud-init.yaml  docker-compose.hetzner.yml  docker-compose.yml
docs/: dashdown.yaml  llms-full.txt  llms.txt  sources.yaml
docs/assets/: europe.json
docs/data/: by_country.csv  daily.csv  device_specs.csv  downloads.csv  feature_scores.csv  org.csv  prices.csv  user_flow.csv  world_indicators.csv
docs/drafts/: README.md  authentication.md
docs/pages/: cli.md  configuration.md  embedding.md  examples.md  exporting.md  extending.md  filters.md  formatting.md  getting-started.md  index.md  installation.md  pages.md  python-queries.md  queries.md  realtime.md  search.md  telemetry.md  theming.md
docs/pages/ai/: ask.md  coding-agents.md  edit-mode.md  index.md
docs/pages/components/: button-group.md  combobox.md  counter.md  date-range.md  dropdown.md  grid.md  index.md  maps.md  pivot-table.md  range-slider.md  search.md  site-search.md  slider.md  table.md  tabs.md  time-grain.md  toggle.md  value.md
docs/pages/components/charts/: auto-chart.md  bar-chart.md  box-plot.md  calendar-heatmap.md  candlestick-chart.md  combo-chart.md  funnel-chart.md  gauge-chart.md  graph-chart.md  heatmap-chart.md  index.md  line-chart.md  map-chart.md  parallel-chart.md  pie-chart.md  radar-chart.md  sankey-chart.md  (+6 more)
docs/pages/connectors/: bigquery.md  clickhouse.md  csv.md  cube.md  dax.md  duckdb.md  excel.md  index.md  json.md  motherduck.md  mssql.md  mysql.md  parquet.md  postgres.md  quack.md  sheets.md  snowflake.md
docs/pages/detail-pages/: [channel].md  index.md
docs/pages/semantic-layer/: cube.md  ibis.md  index.md
docs/partials/: cta.md
docs/queries/: all_channels.sql  by_channel.sql  by_channel_recent.sql  channel_totals.sql  daily_metrics.sql  daily_prices.sql  daily_streams.sql  device_specs.sql  downloads_by_channel_wide.sql  downloads_by_country.sql  downloads_by_month.sql  downloads_forecast.py  downloads_total.sql  downloads_vs_avg.sql  feature_scores.sql  goal_completion.sql  org_tree.sql  user_flow.sql  world_indicators.sql
examples/growth-answers/: README.md  dashdown.yaml  sources.yaml
examples/growth-answers/.dashdown/: ask_log.jsonl
examples/growth-answers/data/: campaigns.csv  customers.csv  orders.csv
examples/growth-answers/pages/: index.md
examples/growth-answers/semantic/: growth.yml
examples/growth-answers/triggers/: repeat-rate.yml
plans/ai-readiness/: ARCHITECTURE.md  BACKLOG.md  PLAN.md
tests/: __init__.py  conftest.py  test_agent_presets.py  test_ask.py  test_ask_compose.py  test_ask_engine.py  test_ask_execute.py  test_ask_keep.py  test_attrs.py  test_auth.py  test_build.py  test_button_group.py  test_charts.py  test_cli_check.py  test_cli_components.py  test_cli_inspect.py  test_cli_metric.py  test_cli_query.py  test_cli_version.py  test_clickhouse_connector.py  test_combobox.py  test_counter.py  test_csv_connector.py  test_data_guard.py  test_date_range.py  test_dbapi_connectors.py  test_dropdown.py  test_dynamic_pages.py  test_edit.py  test_edit_server.py  test_embed.py  test_enterprise.py  test_examples.py  test_export.py  test_filter_debounce.py  test_geo_maps.py  test_global_filters.py  test_grid.py  test_icons.py  test_includes.py  (+40 more)
tests/fixtures/: fake_agent.py
tests/fixtures/semantic_first_class/: README.md  dashdown.yaml
tooling/: build-assets.mjs  enrich-world-iso.py  gen-agent-docs.py  input.css  package.json  tailwind.config.js
(+10 files in other folders)
